--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@types/react-datepicker": "^7.0.0",
     "axios": "^1.8.4",
     "date-fns": "^4.1.0",
