--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@tosspayments/payment-widget-sdk": "^0.12.0",
     "@types/react-datepicker": "^7.0.0",
     "axios": "^1.8.4",
     "date-fns": "^4.1.0",
