--- a/.github/workflows/ci-cd-dev.yml
+++ b/.github/workflows/ci-cd-dev.yml
@@ -36,7 +36,7 @@ jobs:
         run: |
           docker buildx build --push \
             --build-arg VITE_API_URL=${{ secrets.VITE_API_URL }} \
-            --build-arg VITE_VERIFY_SPONSOR_API_KEY=${{ secrets.VITE_VERIFY_SPONSOR_API_KEY }}
+            --build-arg VITE_VERIFY_SPONSOR_API_KEY=${{ secrets.VITE_VERIFY_SPONSOR_API_KEY }} \
             --tag asia-northeast3-docker.pkg.dev/${{ secrets.ORG_DEV_GCP_PROJECT_ID }}/${{ secrets.ORG_DEV_GCP_REGISTRY_NAME }}/omni-fe-dev:${{ github.sha }}${{ github.run_attempt }} .
 
   deploy:
