--- a/.github/workflows/ci-cd-dev.yml
+++ b/.github/workflows/ci-cd-dev.yml
@@ -63,3 +63,27 @@ jobs:
           git add .
           git commit -m "Update image to omni-fe-dev:${{ github.sha }}${{ github.run_attempt }}"
           git push
+
+  notify:
+    name: Notify Discord
+    runs-on: ubuntu-latest
+    needs: [build, deploy]
+    if: always()
+    steps:
+      - name: Send Discord Notification
+        run: |
+          if [ "${{ needs.build.result }}" == "success" ] && [ "${{ needs.deploy.result }}" == "success" ]; then
+            STATUS="✅ 배포 성공"
+          else
+            STATUS="❌ 배포 실패"
+          fi
+          curl -H "Content-Type: application/json" \
+            -X POST \
+            -d "{
+              \"content\": \"${STATUS} \n\
+              \`1. Repository\`: \`${{ github.repository }}\`\n\
+              \`2. Run Branch\`: \`dev\`\n\
+              \`3. Run Attempt\`: \`${{ github.run_attempt }}\`\n\
+              \`4. Commit\`: <https://github.com/${{ github.repository }}/commit/${{ github.sha }}>\"
+              }" \
+              ${{ secrets.ORG_DISCORD_WEBHOOK_URL }}
