--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.14.0",
     "@tosspayments/payment-widget-sdk": "^0.12.0",
     "@types/react-datepicker": "^7.0.0",
+    "apexcharts": "^5.3.2",
     "axios": "^1.8.4",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
