--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-responsive": "^10.0.1",
     "react-router-dom": "^7.5.0",
     "react-toastify": "^11.0.5",
+    "react-wordcloud": "^1.2.7",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
