--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^19.0.0",
     "react-apexcharts": "^1.7.0",
     "react-awesome-reveal": "^4.3.1",
+    "react-d3-cloud": "^1.0.6",
     "react-datepicker": "^8.2.1",
     "react-dom": "^19.0.0",
     "react-icon": "^1.0.0",
@@ -30,11 +31,11 @@
     "react-responsive": "^10.0.1",
     "react-router-dom": "^7.5.0",
     "react-toastify": "^11.0.5",
-    "react-wordcloud": "^1.2.7",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@types/d3-cloud": "^1.2.9",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@typescript-eslint/eslint-plugin": "^8.29.0",
